2005-01-22  Richard Henderson  <rth@redhat.com>

	* sysdeps/alpha/dl-trampoline.S: New file.
	* sysdeps/alpha/dl-machine.h: Move PLT trampolines there.
	Use RESOLVE_MAP instead of RESOLVE to protect relocation code.
	(elf_machine_runtime_setup): Test for dl_profile non-null.
	(ARCH_LA_PLTENTER, ARCH_LA_PLTEXIT): New.
	* sysdeps/alpha/bits/link.h: New file.
	* sysdeps/generic/ldsodefs.h (La_alpha_regs, La_alpha_retval): New.
	(struct audit_ifaces): Add alpha entries.
	* elf/tst-auditmod1.c: Add alpha entries.

2005-01-22  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ia64/dl-machine.h: Remove PLT trampolines here.
	* sysdeps/ia64/dl-trampoline.S: New file.

	* sysdeps/x86_64/bits/link.h: Use namespace-safe identifiers in
	La_x86_64_xmm definition.

	* posix/Makefile: Use CFLAGS-*.os instead of CFLAGS-*.c for frame
	pointer option.
	* stdlib/Makefile (CFLAGS-system.os): Use this instead of
	CFLAGS-system.c for frame pointer option.

2005-01-21  Roland McGrath  <roland@redhat.com>

	* elf/dl-runtime.c (_dl_profile_fixup): Remove const from REGS.
	* sysdeps/i386/dl-machine.h: Update decl.

2005-01-21  Jakub Jelinek  <jakub@redhat.com>

	* elf/Makefile: Add rules to build and run tst-align2.
	* elf/tst-align2.c: New test.
	* elf/tst-alignmod2.c: New file.
	* sysdeps/powerpc/tst-stack-align.h: New file.
	* sysdeps/i386/dl-machine.h (RTLD_START): Align stack and clear frame
	pointer before calling _dl_init.
	* sysdeps/x86_64/dl-machine.h (RTLD_START): Likewise.

2005-01-20  Ulrich Drepper  <drepper@redhat.com>

	* posix/execl.c: Do not allocate potentially large buffers on the
	stack.
	* posix/execle.c: Likewise.
	* posix/execlp.c: Likewise.
	* posix/execlp.c: Likewise.
	(script_execute): Removed.
	(allocate_scripts_argv): New function.  Called at most once to
	allocate memory, not every time a script is run.  Adjust caller.

	* sysdeps/generic/wordexp.c (exec_comm): Add a few
	TEMP_FAILURE_RETRY.  Reorganize code to avoid multiple calls to
	exec_comm_child.